--- a/Lesracesdechat.html
+++ b/Lesracesdechat.html
@@ -83,36 +83,36 @@
 		
 		<br>
 		
-		<a href="Leschats/1a5.html">
+		<a href="1a5.html">
 			<h1 id= "ancre1">Les 5 premières races de chats</h1>
 		</a>
 				
 			<br>
-			<a href="Leschats/1a5.html#chat1">	
+			<a href="1a5.html#chat1">	
 				<img class="dis" src="Images/Abyssin.jpg" width=15% height=15%>
 			</a> 
 			
 			<br>
-			<a href="Leschats/1a5.html#chat2">	
+			<a href="1a5.html#chat2">	
 				<img class="dis" src="Images/American_curl.jpg" width=15% height=15%>
 			</a>
 			
 			<br>
-			<a href="Leschats/1a5.html#chat3">
+			<a href="1a5.html#chat3">
 				<img class="dis" src="Images/American_shorthair.jpg" width=15% height=15%>
 			</a>
 
 			<br>
-			<a href="Leschats/1a5.html#chat4">	
+			<a href="1a5.html#chat4">	
 				<img class="dis" src="Images/American_wirehair.jpg" width=15% height=15%>
 			</a>
 
 			<br>
-			<a href="Leschats/1a5.html#chat5">	
+			<a href="1a5.html#chat5">	
 				<img class="dis" src="Images/Anatoli.jpg" width=15% height=15%>
 			</a>
 
-		<a href="Leschats/6a10.html">
+		<a href="6a10.html">
 			<h1 id= "ancre2">Les races de chats de 6 à 10</h1>
 		</a>
 
