--- a/Lesracesdechat.html
+++ b/Lesracesdechat.html
@@ -118,87 +118,30 @@
 
 
 			<br>
-			<a href="Leschats/6a10.html#chat6">	
+			<a href="6a10.html#chat6">	
 				<img class="dis" src="Images/Angora.jpg" width=15% height=15%>
 			</a>
 
 			<br>
-			<a href="Leschats/6a10.html#chat7">	
+			<a href="6a10.html#chat7">	
 				<img class="dis" src="Images/Asian.jpg" width=15% height=15%>
 			</a>
 
 			<br>
-			<a href="Leschats/6a10.html#chat8">
+			<a href="6a10.html#chat8">
 				<img class="dis" src="Images/Australian_mist.jpg" width=15% height=15%>
 			</a>
 
 			<br>
-			<a href="Leschats/6a10.html#chat9">
+			<a href="6a10.html#chat9">
 				<img class="dis" src="Images/Balinais.jpg" width=15% height=15%>
 			</a>
 
 			<br>
-			<a href="Leschats/6a10.html#chat10">
+			<a href="6a10.html#chat10">
 				<img class="dis" src="Images/Bengal.jpg" width=15% height=15%>
 			</a>
 		
-		<a href="Leschats/11a15.html">
-			<h1 id= "ancre3">Les races de chats de 11 à 15</h1> 	<!--changer les images-->	
-		</a>
-
-			<a href="Leschats/11a15.html#chat11">	
-				<img class="dis" src="Images/Abyssin.jpg" width=15% height=15%>
-			</a> 
-			
-			<br>
-			<a href="Leschats/11a15.html#chat12">	
-				<img class="dis" src="Images/American_curl.jpg" width=15% height=15%>
-			</a>
-			
-			<br>
-			<a href="Leschats/11a15.html#chat13">
-				<img class="dis" src="Images/American_shorthair.jpg" width=15% height=15%>
-			</a>
-
-			<br>
-			<a href="Leschats/11a15.html#chat14">	
-				<img class="dis" src="Images/American_wirehair.jpg" width=15% height=15%>
-			</a>
-
-			<br>
-			<a href="Leschats/11a15.html#chat15">	
-				<img class="dis" src="Images/Anatoli.jpg" width=15% height=15%>
-			</a>
-
-		<a href="Leschats/16a20.html">
-			<h1 id= "ancre4">Les races de chats de 16 à 20</h1>*
-		</a>
-
-
-			<br>
-			<a href="Leschats/16a20.html#chat16">	
-				<img class="dis" src="Images/Angora.jpg" width=15% height=15%>
-			</a>
-
-			<br>
-			<a href="Leschats/16a20.html#chat17">	
-				<img class="dis" src="Images/Asian.jpg" width=15% height=15%>
-			</a>
-
-			<br>
-			<a href="Leschats/16a20.html#chat18">
-				<img class="dis" src="Images/Australian_mist.jpg" width=15% height=15%>
-			</a>
-
-			<br>
-			<a href="Leschats/16a20.html#chat19">
-				<img class="dis" src="Images/Balinais.jpg" width=15% height=15%>
-			</a>
-
-			<br>
-			<a href="Leschats/16a20.html#chat20">
-				<img class="dis" src="Images/Bengal.jpg" width=15% height=15%>
-			</a>
 		
 		<footer>
 			<p>Realized by Schultz Arnaud and Hiebel Théo aka Garfield and Patapouf</p>
