--- a/1a5.html
+++ b/1a5.html
@@ -11,7 +11,7 @@
 		
 		<meta name= " description " content= "Voici LE site des différentes races de chats"/>
 		
-		<link rel="stylesheet" media="screen" type="text/css" title="P&G's style" href="../style.css"/>
+		<link rel="stylesheet" media="screen" type="text/css" title="P&G's style" href="style.css"/>
 
 		<link rel="icon" href="favicon.ico" />
 
@@ -80,7 +80,7 @@
 
 		<br>
 			<a href="Abyssin.jpg" width=100% height=100%>	
-				<img id="chat1" class="pagechat" src="Images/Abyssin.jpg" width=15% height=15%>
+				<img id="chat1" class="pagechat" src="Abyssin.jpg" width=15% height=15%>
 			</a> 
 
 			<a href="fichechat1.pdf" download=""><p>Télécharger la fiche de l'Abyssin</p></a>
