--- a/6a10.html
+++ b/6a10.html
@@ -105,14 +105,14 @@
 				<img id="chat9" class="pagechat" src="Balinais.jpg" width=15% height=15%>
 			</a>
 
-			<a href="../Fiches/fichechat9.pdf" download=""><p>Télécharger la fiche du Balinais</p></a>
+			<a href="fichechat9.pdf" download=""><p>Télécharger la fiche du Balinais</p></a>
 
 			<br>
-			<a href="../Images/Bengal.jpg" width=100% height=100%>	
-				<img id="chat10" class="pagechat" src="../Images/Bengal.jpg" width=15% height=15%>
+			<a href="Bengal.jpg" width=100% height=100%>	
+				<img id="chat10" class="pagechat" src="Bengal.jpg" width=15% height=15%>
 			</a>
 
-			<a href="../Fiches/fichechat10.pdf" download=""><p>Télécharger la fiche du Bengal</p></a>
+			<a href="fichechat10.pdf" download=""><p>Télécharger la fiche du Bengal</p></a>
 
 		<a class="page" href="1a5.html" title="1a5"> Page précédente </a>
 
