--- a/Lesracesdechat.html
+++ b/Lesracesdechat.html
@@ -89,27 +89,27 @@
 				
 			<br>
 			<a href="1a5.html#chat1">	
-				<img class="dis" src="Images/Abyssin.jpg" width=15% height=15%>
+				<img class="dis" src="Abyssin.jpg" width=15% height=15%>
 			</a> 
 			
 			<br>
 			<a href="1a5.html#chat2">	
-				<img class="dis" src="Images/American_curl.jpg" width=15% height=15%>
+				<img class="dis" src="American_curl.jpg" width=15% height=15%>
 			</a>
 			
 			<br>
 			<a href="1a5.html#chat3">
-				<img class="dis" src="Images/American_shorthair.jpg" width=15% height=15%>
+				<img class="dis" src="American_shorthair.jpg" width=15% height=15%>
 			</a>
 
 			<br>
 			<a href="1a5.html#chat4">	
-				<img class="dis" src="Images/American_wirehair.jpg" width=15% height=15%>
+				<img class="dis" src="American_wirehair.jpg" width=15% height=15%>
 			</a>
 
 			<br>
 			<a href="1a5.html#chat5">	
-				<img class="dis" src="Images/Anatoli.jpg" width=15% height=15%>
+				<img class="dis" src="Anatoli.jpg" width=15% height=15%>
 			</a>
 
 		<a href="6a10.html">
@@ -119,27 +119,27 @@
 
 			<br>
 			<a href="6a10.html#chat6">	
-				<img class="dis" src="Images/Angora.jpg" width=15% height=15%>
+				<img class="dis" src="Angora.jpg" width=15% height=15%>
 			</a>
 
 			<br>
 			<a href="6a10.html#chat7">	
-				<img class="dis" src="Images/Asian.jpg" width=15% height=15%>
+				<img class="dis" src="Asian.jpg" width=15% height=15%>
 			</a>
 
 			<br>
 			<a href="6a10.html#chat8">
-				<img class="dis" src="Images/Australian_mist.jpg" width=15% height=15%>
+				<img class="dis" src="Australian_mist.jpg" width=15% height=15%>
 			</a>
 
 			<br>
 			<a href="6a10.html#chat9">
-				<img class="dis" src="Images/Balinais.jpg" width=15% height=15%>
+				<img class="dis" src="Balinais.jpg" width=15% height=15%>
 			</a>
 
 			<br>
 			<a href="6a10.html#chat10">
-				<img class="dis" src="Images/Bengal.jpg" width=15% height=15%>
+				<img class="dis" src="Bengal.jpg" width=15% height=15%>
 			</a>
 		
 		
