--- a/Contact.html
+++ b/Contact.html
@@ -79,15 +79,15 @@
 
 		<h2 id="Arnaud">Arnaud aka Garfield</h2>
 
-		<a href="Fiches/Arnaud.pdf" download=""><p>Télécharger la fiche d'information de Arnaud</p></a>
+		<a href="Arnaud.pdf" download=""><p>Télécharger la fiche d'information de Arnaud</p></a>
 
 
 
 		<h2 id="Théo">Théo aka Patapouf</h2>
 
-		<a href="Fiches/Théo.pdf" download=""><p>Télécharger la fiche d'information de Théo</p></a>
+		<a href="Théo.pdf" download=""><p>Télécharger la fiche d'information de Théo</p></a>
 
-		<a href="Fiches/Répartition.pdf" download=""><p>Télécharger la fiche d'information des répartitions des tâches</p></a>
+		<a href="Répartition.pdf" download=""><p>Télécharger la fiche d'information des répartitions des tâches</p></a>
 
 		
 		<footer>
