--- a/1a5.html
+++ b/1a5.html
@@ -100,15 +100,15 @@
 			<a href="fichechat3.pdf" download=""><p>Télécharger la fiche de l'American shorthair</p></a>
 
 		<br>
-			<a href="American_wirehair.JPG" width=100% height=100%>	
-				<img id="chat4" class="pagechat" src="American_wirehair.JPG" width=15% height=15%>
+			<a href="American_wirehair.jpg" width=100% height=100%>	
+				<img id="chat4" class="pagechat" src="American_wirehair.jpg" width=15% height=15%>
 			</a>
 
 			<a href="fichechat4.pdf" download=""><p>Télécharger la fiche de l'American wirehair</p></a>
 
 		<br>
-			<a href="Anatoli.JPG" width=100% height=100%>	
-				<img id="chat5" class="pagechat" src="Anatoli.JPG" width=15% height=15%>
+			<a href="Anatoli.jpg" width=100% height=100%>	
+				<img id="chat5" class="pagechat" src="Anatoli.jpg" width=15% height=15%>
 			</a>
 
 			<a href="fichechat5.pdf" download=""><p>Télécharger la fiche de l'Anatoli</p></a>
