--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<link rel="stylesheet" media="screen" type="text/css" title="Patapouf and Garfield's style" href="style.css"/>
 
-		<link rel="icon" href="Images/favicon.ico" />
+		<link rel="icon" href="favicon.ico" />
 		
 
 	</head>
