--- a/histoiredeschats.html
+++ b/histoiredeschats.html
@@ -13,7 +13,7 @@
 		
 		<link rel="stylesheet" media="screen" type="text/css" title="P&G's style" href="style.css"/>
 	
-		<link rel="icon" href="Images/favicon.ico" />
+		<link rel="icon" href="favicon.ico" />
 
 	</head>
 	
