--- a/Contact.html
+++ b/Contact.html
@@ -88,7 +88,7 @@
 		<a href="Théo.pdf" download=""><p>Télécharger la fiche d'information de Théo</p></a>
 		
 		<p> <a target="blank" href="https://www.instagram.com/le_chat_Patapouf/">
-			N'hésitez pas à passer sur le compte instagram de mon chat
+			N'hésitez pas à passer sur le compte instagram de mon chat </a>
 			</p>
 
 		<a href="Répartition.pdf" download=""><p>Télécharger la fiche d'information des répartitions des tâches</p></a>
