--- a/Contact.html
+++ b/Contact.html
@@ -80,12 +80,19 @@
 		<h2 id="Arnaud">Arnaud aka Garfield</h2>
 
 		<a href="Arnaud.pdf" download=""><p>Télécharger la fiche d'information de Arnaud</p></a>
+		<p> <a target="blank" href="https://www.instagram.com/arnaud_shltz/">
+			N'hésitez pas à passer sur mon compte instagram </a>
+			</p>
 
 
 
 		<h2 id="Théo">Théo aka Patapouf</h2>
 
 		<a href="Théo.pdf" download=""><p>Télécharger la fiche d'information de Théo</p></a>
+		
+		<p> <a target="blank" href="https://www.instagram.com/hiebeltheo/">
+			N'hésitez pas à passer sur mon compte instagram </a>
+			</p>
 		
 		<p> <a target="blank" href="https://www.instagram.com/le_chat_Patapouf/">
 			N'hésitez pas à passer sur le compte instagram de mon chat </a>
