--- a/Contact.html
+++ b/Contact.html
@@ -100,7 +100,8 @@
 
 		<a href="Répartition.pdf" download=""><p>Télécharger la fiche d'information des répartitions des tâches</p></a>
 		
-		
+		<p>Merci à Erwann et Andrew de nous approvisionner en petits pains après les vacances de Noël !</p>
+		<a target="blank" href="http://www.lesprosdeschampignons.fr/" >Voici leur site</a>
 
 		
 		<footer>
